# apro

./: .gitignore  .gitmodules  README.md  pyproject.toml
analyze/: __init__.py  analyze_apro.py  architectures.py  mnist.py  norm_test.py  train_apro.py
apro/: __init__.py
apro/approximation/: __init__.py  approx.py
apro/layers/: __init__.py  base.py  gloro.py
apro/models/: __init__.py  apronet.py
pretrained_model/mnist/: mnist_cnn_2c2f_e0.h5  mnist_cnn_2c2f_e1.h5  mnist_cnn_2c2f_e2.h5  mnist_cnn_2c2f_e3.h5  mnist_cnn_2c2f_e4.h5
training/: __init__.py  architectures.py  train_apro.py
