[tool.poetry]
name = "apro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.8, <3.10"
gloro = { path = "./gloro/" }
tensorflow = "^2.12.0"
tensorflow-datasets = "^4.9.2"
protobuf = "^3.20.0"
keras = "^2.12.0"
scriptify = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
